--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           width: 100%;
           display: flex; /* Use Flexbox for alignment */
           align-items: center; /* Center items along the cross axis */
-          justify-content: space-around; /* Distribute space evenly */
+          justify-content: center; /* Distribute space evenly */
           padding: 0.5rem;
           box-sizing: border-box;
           /* REMOVE all font-related properties like font-family, font-size, color, etc. */
