--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         padding-left: 6rem;
         padding-right: 6rem;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
       }
       .title {
         font-size: 1.75rem;
@@ -105,7 +107,6 @@
       }
       #posterContainer {
         margin-top: 1.5rem;
-        margin-bottom: 9rem;
         display: flex;
         justify-content: center;
         align-items: center;
