--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       }
       #posterContainer {
         margin-top: 1.5rem;
+        margin-bottom: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -622,7 +623,7 @@
                         🎨
                         <input type="color" id="bgColorPickerInput" value="#dc2626">
                     </label>
-                    <button class="confirm-button" id="bgConfirmBtn">OK</button>
+                    <button class="confirm-button" id="bgConfirmBtn">Choose Color</button>
                 </div>
             </div>
         </div>
