--- a/index.html
+++ b/index.html
@@ -735,8 +735,9 @@
         }
                 /* --- Mobile Style for Spacing Selector --- */
         #spacingSelector .radio-group {
-          flex-wrap: wrap; /* Allow buttons to wrap to the next line */
-          gap: 0.5rem 1rem;  /* Adjust row and column gap */
+          /* REMOVED flex-wrap: wrap; to prevent the last item from dropping */
+          gap: 0.75rem; /* A single, slightly smaller gap to help items fit */
+          font-size: 0.85rem; /* Make the text a bit smaller to ensure it fits */
         }
       }
     </style>
